# rust-coding-agent

./: .env.sample  .gitignore  Cargo.toml  README.md  riddle.txt
src/: agent.rs  config.rs  main.rs  tool.rs
src/tools/: bash.rs  edit_file.rs  list_files.rs  mod.rs  read_file.rs
