[package]
name = "rust-coding-agent"
version = "0.1.0"
edition = "2024"
authors = [
    "Tomasz Mikus <hi@tomaszmik.us>"
]

[dependencies]
anthropic_rust = { path = "../anthropic-sdk/anthropic-sdk-rust" }
anyhow = "1.0.99"
dotenv = "0.15.0"
jsonschema = "0.33.0"
serde_json = "1.0.143"
schemars = "1.0.4"
tokio = { version = "1.47.1" , features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.219", features = ["derive"] }
